--- a/templates/main.html
+++ b/templates/main.html
@@ -5,8 +5,20 @@
   </md-content>
   <md-content class="page flex layout-padding">
     <section layout-align="center center" layout="row">
-      <p class="main center center">albaco es un POS enfocado a la nube</p>
+      <p class="main center center">albaco, un POS enfocado a la nube</p>
+      
     </section>
-    
+    <div class="ng-scope layout-row">
+      <div class="flex">
+        <img src="/images/albaco.png" class="main-img" alt="logo">
+      </div>
+      <div class="flex-60">
+        <ul class="main-list">
+          <li>Ligero</li>
+          <li>Android, iOS, Windows</li>
+          <li>Administración centralizada</li>
+        </ul>
+      </div>
+    </div>
   </md-content>
 </div>
