--- a/templates/header.html
+++ b/templates/header.html
@@ -1,13 +1,13 @@
 <md-toolbar class="header" ng-controller="navCtrl">
     <div class="md-toolbar-tools">
-        <md-button class="menu" hide-gt-sm> menu </md-button>
+        <md-button class="menu" hide-gt-xs> menu </md-button>
         <h2>
-        <span> Albaco </span>
+            <span> albaco pos </span>
         </h2>
         <span flex></span>
-        <span>
-            <md-button aria-label="First Button"> ingresar </md-button>
-            <md-button aria-label="Second Button"> registro </md-button>
+        <span show-gt-xs>
+            <md-button aria-label="ingresar" ng-href="#/login"> ingresar </md-button>
+            <md-button aria-label="registro" ng-href="#/login"> registro </md-button>
         </span>
     </div>
 </md-toolbar
