--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,10 +3,10 @@
   <div layout-align="center" class="md-padding" layout="row">
       
       <ul>
-          <li><a href="/#/accounts">Cuentas</a></li>
+          <li><a href="/#/customers">Clientes</a></li>
           <li><a href="/#/categories">Categorias</a></li>
           <li><a href="/#/invoices">Notas de venta</a></li>
-          
+          <li><a href="/#/accounts">Cuentas</a></li>
       </ul>
       
       
