--- a/templates/header.html
+++ b/templates/header.html
@@ -1,9 +1,7 @@
 <md-toolbar class="header" ng-controller="navCtrl">
     <div class="md-toolbar-tools">
-        <md-button class="menu" hide-gt-xs> menu </md-button>
-        <h2>
-            <span> albaco pos </span>
-        </h2>
+        <md-button class="menu" hide-gt-xs><md-icon> menu </md-icon></md-button>
+        <h2> albaco pos </h2>
         <span flex></span>
         <span show-gt-xs>
             <md-button aria-label="ingresar" ng-href="#/login"> ingresar </md-button>
