--- a/templates/customers.html
+++ b/templates/customers.html
@@ -1,5 +1,4 @@
-<div layout="column" layout-fill>  
-  <div id="header" ng-include=" 'templates/header.html' "></div>
+<div layout="column" layout-fill>
   <md-content layout-align="center" class="md-padding" layout="row">
     <section>
       <md-subheader class="md-primary">Listado de clientes</md-subheader>
@@ -16,7 +15,7 @@
       </md-list>
     </section>
   </md-content>
-  <md-button class="md-fab md-fab-bottom-right" ng-click="add()">        
+  <md-button class="md-fab md-fab-bottom-right md-warn" ng-click="add()">        
     <md-icon> add </md-icon>
     <md-tooltip md-direction="top"> Agregar cliente </md-tooltip>
   </md-button>
