--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,9 +1,9 @@
 <div layout="column" layout-fill>  
-  <div id="header" ng-include=" 'templates/header.html' "></div>
   <div layout-align="center" class="md-padding" layout="row">
       
       <ul>
           <li><a href="/#/customers">Clientes</a></li>
+          <li><a href="/#/profile">Perfil</a></li>
           <li><a href="/#/categories">Categorias</a></li>
           <li><a href="/#/invoices">Notas de venta</a></li>
           <li><a href="/#/accounts">Cuentas</a></li>
