--- a/templates/main.html
+++ b/templates/main.html
@@ -1,14 +1,12 @@
-<div layout="column" layout-fill>
-  <div id="footer" ng-include=" 'templates/header.html' "></div>
-  <md-content class="main-background main-page" layout="row">
+
+  <div class="main-background main-page">
     <h1 class="title">albaco</h1>
-  </md-content>
-  <md-content class="page flex layout-padding">
-    <section layout-align="center center" layout="row">
+  </div>
+  <md-content class="">
+    <div layout-align="center center">
       <p class="main center center">albaco, un POS enfocado a la nube</p>
-      
-    </section>
-    <div class="ng-scope layout-row">
+    </div>
+    <div class="ng-scope">
       <div class="flex">
         <img src="/images/albaco.png" class="main-img" alt="logo">
       </div>
@@ -21,4 +19,3 @@
       </div>
     </div>
   </md-content>
-</div>
