--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,11 +2,16 @@
   <div layout-align="center" class="md-padding" layout="row">
       
       <ul>
-          <li><a href="/#/customers">Clientes</a></li>
-          <li><a href="/#/profile">Perfil</a></li>
+          
+          <li><a href="/#/account">Datos de la empresa</a></li>
+          <li><a href="/#/my">Mi perfil</a></li>
+          <li><a href="/#/password">Mi contraseña</a></li>
+          <li><a href="/#/profiles">Usuarios del sistema</a></li>
+          <li><a href="/#/customers">Listado de clientes</a></li>
           <li><a href="/#/categories">Categorias</a></li>
           <li><a href="/#/invoices">Notas de venta</a></li>
-          <li><a href="/#/accounts">Cuentas</a></li>
+          
+          
       </ul>
       
       
