--- a/templates/password.html
+++ b/templates/password.html
@@ -3,7 +3,7 @@
     <form name="form">
         <md-input-container class="md-block">
             <label>Contraseña</label>
-            <input name="profile_password_1" ng-model="profile.profile_password_1" type="text" ng-minlength="8" ng-maxlength="20" required autofocus>
+            <input name="profile_password_1" ng-model="profile.profile_password_1" type="password" ng-minlength="8" ng-maxlength="20" required autofocus>
             <div ng-messages="form.profile_password_1.$error">
                 <div ng-message-exp="['minlength', 'maxlength', 'required']">
                     Se requiere una contraseña valida de minimo 8 y maximo 20 caracteres de longitud
@@ -12,14 +12,9 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Confirmación</label>
-            <input name="profile_password_2" ng-model="profile.profile_password_2" type="text" ng-minlength="8" ng-maxlength="20" required repeat-password="profile_password_1">
+            <input name="profile_password_2" ng-model="profile.profile_password_2" type="password" ng-minlength="8" ng-maxlength="20" required repeat-password="profile_password_1">
             <div ng-messages="form.profile_password_2.$error">
-                <div ng-message-exp="['minlength', 'maxlength', 'required']">
-                    Se requiere una contraseña valida de minimo 8 y maximo 20 caracteres de longitud
-                </div>
-            </div>
-            <div ng-messages="form.profile_password_2.$error.dontMatch">
-              gg
+                <div ng-message="repeat">No son iguales los campos</div>
             </div>
         </md-input-container>
     </form>
