--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -2,7 +2,7 @@
   <md-content layout-align="center" class="md-padding" layout="row">
     <md-list flex="80">
       <md-subheader class="md-no-sticky">Cuentas</md-subheader>
-        <md-list-item class="md-2-line"ng-repeat="item in items | filter: data.searchQuery" ng-href="#/profiles/edit/{{item.profile_id}}">
+        <md-list-item class="md-2-line"ng-repeat="item in items | filter: data.searchQuery">
           <img gravatar-src="item.profile_email" gravatar-size="100" class="md-avatar" alt="{{ item.profile_usernam }}" />
           <div class="md-list-item-text" layout="column">
             <h3><md-icon class="dodgerblue" ng-show="item.profile_enable"> check </md-icon> {{ item.profile_name | uppercase }}</h3>
