--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,41 +1,19 @@
-<div layout="column" layout-fill>  
-  <div id="header" ng-include=" 'templates/header.html' "></div>
+<div layout="column" layout-fill>
   <md-content layout-align="center" class="md-padding" layout="row">
     <md-list flex="80">
       <md-subheader class="md-no-sticky">Categorías</md-subheader>
-        <md-list-item class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery" ng-href="#/products/{{item.category_id}}">
+        <md-list-item class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
           <div class="md-list-item-text" layout="column">
             <h3 class="dodgerblue">{{ item.category_name | uppercase }}</h3>
             <h4>{{ item.category_description | uppercase }}</h4>
             <p>{{ item.product_count }} lineas</p>
           </div>
-          <md-menu md-position-mode="target-right target">
-            <md-button aria-label="Menu" class="md-icon-button" ng-click="openMenu($mdOpenMenu, $event)">
-              <md-icon> menu </md-icon>
-            </md-button>
-            <md-menu-content width="4">
-              <md-menu-item>
-                <md-button ng-click="edit($index)">
-                  <div layout="row"><p flex>Editar categoría</p><md-icon> edit </md-icon></div>
-                </md-button>
-              </md-menu-item>
-              <md-menu-item>
-                <md-button ng-click="enable($index)">
-                  <div layout="row"><p flex>Ocultar categoría</p><md-icon> visibility </md-icon></div>
-                </md-button>
-              </md-menu-item>
-              <md-menu-item>
-                <md-button ng-click="delete($index)">
-                  <div layout="row"><p flex>Eliminar categoría</p><md-icon> delete </md-icon></div>
-                </md-button>
-              </md-menu-item>
-            </md-menu-content>
-          </md-menu>
+          <div id="header" ng-include=" 'templates/template.menu.html' "></div>
           <md-divider></md-divider>
         </md-list-item>
     </md-list>
   </md-content>
-  <md-button class="md-fab md-fab-bottom-right" ng-click="add()">        
+  <md-button class="md-fab md-fab-bottom-right md-warn" ng-click="add()">        
     <md-icon> add </md-icon>
     <md-tooltip md-direction="top"> Agregar categoría </md-tooltip>
   </md-button>        
