--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -1,4 +1,4 @@
-<md-toolbar class="md-medium-tall footer md-accent md-hue-3">
+<md-toolbar class="md-medium-tall footer md-accent md-hue-3 md-whiteframe-z2">
     <div layout="row" layout-align="center center" flex>
         <p class="small">Hecho en México, Cuatro Colibri SA de CV, todos los derechos reservados 2016.</p>
     </div>
