--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,4 +1,4 @@
-<md-toolbar class="header">
+<md-toolbar class="header md-whiteframe-2dp">
     <div class="md-toolbar-tools">
         <md-button class="menu" hide-gt-xs><md-icon> menu </md-icon></md-button>
         <h2> albaco pos </h2>
