--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,12 +1,12 @@
 <div layout="column" layout-fill>
   <md-content layout-align="center" class="md-padding" layout="row">
     <md-list flex="80">
-      <md-subheader class="md-no-sticky">Categorías</md-subheader>
+      <md-subheader class="md-no-sticky">Categorías de venta</md-subheader>
         <md-list-item class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
           <div class="md-list-item-text" layout="column">
             <h3 class="dodgerblue">{{ item.category_name | uppercase }}</h3>
-            <h4>{{ item.category_description | uppercase }}</h4>
-            <p>{{ item.product_count }} lineas</p>
+            <h4>{{ item.product_count }} lineas</h4>
+            <p>{{ item.category_description | uppercase }}&nbsp;</p>
           </div>
           <div id="header" ng-include=" 'templates/template.menu.html' "></div>
           <md-divider></md-divider>
