--- a/templates/products.html
+++ b/templates/products.html
@@ -1,36 +1,14 @@
-<div layout="column" layout-fill>  
-  <div id="header" ng-include=" 'templates/header.html' "></div>
+<div layout="column" layout-fill>
   <md-content layout-align="center" class="md-padding" layout="row">
     <md-list flex="80">
-      <md-subheader class="md-no-sticky">Lineas</md-subheader>
-        <md-list-item class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery" ng-href="#/stocks/{{item.product_id}}">
+      <md-subheader class="md-no-sticky">Lineas de products</md-subheader>
+        <md-list-item class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
           <div class="md-list-item-text" layout="column">
-            <h3 class="dodgerblue">{{ item.product_name | uppercase }}</h3>
-            <h4>{{ item.product_key | uppercase }} - {{ item.product_description }}</h4>
+            <h3 class="dodgerblue">{{ item.product_key | uppercase }} - {{ item.product_name | uppercase }}</h3>
+            <h4>{{ item.category_name | uppercase }}</h4>
             <p>{{ item.product_price_1 | currency }} {{ item.unit_name }}</p>
           </div>
-          <md-menu md-position-mode="target-right target">
-            <md-button aria-label="Menu" class="md-icon-button" ng-click="openMenu($mdOpenMenu, $event)">
-              <md-icon> menu </md-icon>
-            </md-button>
-            <md-menu-content width="4">
-              <md-menu-item>
-                <md-button ng-click="edit($index)">
-                  <div layout="row"><p flex>Editar producto</p><md-icon> edit </md-icon></div>
-                </md-button>
-              </md-menu-item>
-              <md-menu-item>
-                <md-button ng-click="enable($index)">
-                  <div layout="row"><p flex>Ocultar producto</p><md-icon> visibility </md-icon></div>
-                </md-button>
-              </md-menu-item>
-              <md-menu-item>
-                <md-button ng-click="delete($index)">
-                  <div layout="row"><p flex>Eliminar producto</p><md-icon> delete </md-icon></div>
-                </md-button>
-              </md-menu-item>
-            </md-menu-content>
-          </md-menu>
+          <div id="header" ng-include=" 'templates/template.menu.html' "></div>
           <md-divider></md-divider>
         </md-list-item>
     </md-list>
