--- a/templates/invoices.html
+++ b/templates/invoices.html
@@ -2,7 +2,7 @@
   <md-content layout-align="center" class="md-padding" layout="row">
     <md-list flex="80">
       <md-subheader class="md-no-sticky">Notas de venta</md-subheader>
-        <md-list-item class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
+        <md-list-item md-ink-ripple class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
           <div class="md-list-item-text" layout="column">
             <h3 class="dodgerblue">{{ item.sale_id }} - {{ item.customer_name | uppercase }}</h3>
             <h4>{{ item.status_id }} {{ item.sale_total | currency }}&nbsp;</h4>
