--- a/templates/partials/app.html
+++ b/templates/partials/app.html
@@ -1,49 +1,46 @@
 <md-sidenav layout="column" class="md-sidenav-left md-whiteframe-z2" md-component-id="left" md-is-locked-open="$mdMedia('gt-md')">
     <md-toolbar class="md-tall md-hue-2">
       <span flex></span>
-      <div layout="column" class="md-toolbar-tools-bottom inset">
+      <div layout="column" layout-align="center center" class="md-toolbar-tools-bottom inset">
         <user-avatar></user-avatar>
         <span></span>
-        <div>Firstname Lastname</div>
-        <div>email@domainname.com</div>
+        <div class="small">Firstname Lastname</div>
+        <div class="small">email@domainname.com</div>
       </div>
     </md-toolbar>
     <md-list>
-    <md-item ng-repeat="item in menu">
-      <a>
-        <md-item-content md-ink-ripple layout="row" layout-align="start center">
-          <div class="inset">
-            <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
-          </div>
-          <div class="inset">{{item.title}}
-          </div>
-        </md-item-content>
-      </a>
-    </md-item>
+      <md-item ng-repeat="item in menu">
+        <a ng-href="{{item.link}}">
+          <md-item-content md-ink-ripple layout="row" layout-align="start center">
+            <div class="inset">
+              <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
+            </div>
+            <div class="inset">{{item.title}}
+            </div>
+          </md-item-content>
+        </a>
+      </md-item>
     <md-divider></md-divider>
     <md-subheader>Management</md-subheader>
-    <md-item ng-repeat="item in admin">
-      <a>
-        <md-item-content md-ink-ripple layout="row" layout-align="start center">
-          <div class="inset">
-            <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
-          </div>
-          <div class="inset">{{item.title}}
-          </div>
-        </md-item-content>
-      </a>
+      <md-item ng-repeat="item in admin">
+        <a>
+          <md-item-content md-ink-ripple layout="row" layout-align="start center">
+            <div class="inset">
+              <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
+            </div>
+            <div class="inset">{{item.title}}
+            </div>
+          </md-item-content>
+        </a>
     </md-item>
   </md-list>
 </md-sidenav>
-
-
-<!-- content -->
-
+<!-- page -->
 <div layout="column" class="relative" layout-fill role="main">
   <!-- first -->
   <md-toolbar class="md-whiteframe-2dp" ng-show="!showSearch">
     <div class="md-toolbar-tools">
-      <md-button ng-click="toggleSidenav('left')" hide-gt-md aria-label="Menu">
+      <md-button class="md-icon-button" ng-click="toggleSidenav('left')" hide-gt-md aria-label="Menu">
         <ng-md-icon icon="menu"></ng-md-icon>
       </md-button>
       <h3>
@@ -61,7 +58,7 @@
   <!-- second -->
   <md-toolbar class="md-whiteframe-2dp" ng-show="showSearch">
     <div class="md-toolbar-tools">
-      <md-button ng-click="showSearch = !showSearch" aria-label="Back">
+      <md-button class="md-icon-button" ng-click="showSearch = !showSearch" aria-label="Back">
         <ng-md-icon icon="arrow_back"></ng-md-icon>
       </md-button>
       <h3 flex="10">
@@ -78,13 +75,9 @@
         <ng-md-icon icon="more_vert"></ng-md-icon>
       </md-button>
     </div>
-    
   </md-toolbar>
-  
   <!-- contenido -->
   <md-content flex md-scroll-y>
-  
     <div ui-view="columnOne"></div>
-  
   </md-content>
 </div>
