--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -1,6 +1,6 @@
-<div layout="column" layout-fill>
-  <md-content layout-align="center" class="md-padding" layout-xs="column" layout="row">
-    <div flex-gt-xs="50" layout="column">
+<div layout="column" layout-fill layout-align="center center">
+  <md-content layout-align="center" class="md-padding" layout="row">
+    <div flex layout="column">
           <h1 class="title">albaco</h1>
           <md-subheader class="md-primary">Formulario de ingreso</md-subheader>
           <form name="loginForm">
