--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 
 html, body {
     font-family: 'Roboto', sans-serif;
-    font-size:14px;
+    font-size: 14px;
     font-weight: 200 !important;
     height: 100%;
     margin: 0px;
@@ -9,11 +9,8 @@ html, body {
     color: #333333;
 }
 
-#content--  {
-  padding-left: 40px;
-  padding-right: 40px;
-  padding-top: 5px;
-  overflow: hidden;
+a {
+    text-decoration: none;
 }
 
 .small {
@@ -23,22 +20,15 @@ html, body {
 .capitalize {
     text-transform: capitalize;
 }
-.main-background {
+.big-image {
     background-image: url("/images/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
-}
-
-.main-page-- {
-    height: 400px;
-}
-
-.page-- {
-    min-height: 480px;
+    
 }
 
 .title {
-    color: #ffffff;
+    color: #fdfdfd;
     margin-left: auto;
     margin-right: auto;
     margin-top: 10%;
@@ -46,7 +36,7 @@ html, body {
     text-shadow: 2px 2px 8px rgba(120, 120, 120, 0.4);
 }
 
-.main {
+.slogan {
     font-size: xx-large;
     font-weight: lighter;
     font-style: oblique;
@@ -54,14 +44,13 @@ html, body {
     color: #666666;
 }
 
-.main-img {
+.albaco-img {
     max-width: 100px;
     max-height: 100px;
     border: 3px solid #f1f1f1;
     border-radius: 100%;
     box-shadow: 0 1px 1px rgba(0,0,0,0.1);
-    margin-left: 100px;
-    margin-bottom: 100px;
+    margin-bottom: 80px;
 }
 
 
