--- a/templates/main/contact.html
+++ b/templates/main/contact.html
@@ -1,4 +1,4 @@
-<div layout="column" layout-fill layout-align="center center">
+<div layout="column" flex="100" layout-fill layout-align="center center">
   <md-content  class="md-padding">
     <h1 class="title">albaco</h1>
   </md-content>
