--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -1,4 +1,4 @@
-<div layout="column" layout-fill layout-align="center center">
+<div layout="column" flex="100" layout-fill layout-align="center center">
   <md-content layout-align="center" class="md-padding" layout="row">
     <div flex layout="column">
           <h1 class="title">albaco</h1>
