--- a/templates/main.html
+++ b/templates/main.html
@@ -26,7 +26,7 @@
   </div>
 </md-toolbar>
 <!-- Main Container -->
-<div layout="column" layout-fill>
+<div layout="column" layout-fill class="page">
   <div flex="50" class="big-image">
     <div layout="row">
       <h1 class="title">albaco</h1>
