--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -1,6 +1,8 @@
 <div layout="column" layout-fill layout-align="center center">
-  <md-content  class="md-padding">
-    <h1 class="title">albaco</h1>
-    <p>es un software de punto de venta</p> 
-  </md-content>
+  <div layout-align="center" class="md-padding" layout="row">
+    <md-content flex layout="column" class="page">
+      <h1 class="title">albaco</h1>
+      <p>es un software de punto de venta</p> 
+    </md-content>
+  </div>
 </div>
