--- a/css/styles.css
+++ b/css/styles.css
@@ -7,10 +7,15 @@ html, body {
     margin: 0px;
     padding: 0px;
     color: #333333;
+    background-color: white;
 }
 
 a {
     text-decoration: none;
+}
+
+.page {
+   height: calc(100vh - 35px);
 }
 
 .small {
