--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -1,6 +1,6 @@
-<div layout="column" flex="100" layout-fill layout-align="center center">
-  <md-content layout-align="center" class="md-padding" layout="row">
-    <div flex layout="column">
+<div layout="column" layout-fill layout-align="center center">
+  <div layout-align="center" class="md-padding" layout="row">
+    <md-content flex layout="column" class="page">
           <h1 class="title">albaco</h1>
           <md-subheader class="md-primary">Formulario de ingreso</md-subheader>
           <form name="loginForm">
@@ -24,6 +24,6 @@
           <section layout-align="center" layout="row">
             <a class="small" ng-href="#/"><md-icon> keyboard_backspace </md-icon> regresar a inicio</a> 
           </section>
-    </div>
-  </md-content>
+    </md-content>
+  </div>
 </div>
