--- a/templates/invoices.html
+++ b/templates/invoices.html
@@ -1,20 +1,23 @@
-<div layout="column" layout-fill>
-  <md-content layout-align="center" class="md-padding" layout="row">
-    <md-list flex="80">
-      <md-subheader class="md-no-sticky">Notas de venta</md-subheader>
-        <md-list-item md-ink-ripple class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
-          <div class="md-list-item-text" layout="column">
-            <h3 class="dodgerblue">{{ item.sale_id }} - {{ item.customer_name | uppercase }}</h3>
-            <h4>{{ item.status_id }} {{ item.sale_total | currency }}&nbsp;</h4>
-            <p>{{ item.sale_timestamp | date:'medium' }}</p>
-          </div>
-          <div id="header" ng-include=" 'templates/template.menu.html' "></div>
-          <md-divider></md-divider>
-        </md-list-item>
-    </md-list>
-  </md-content>
-  <md-button class="md-fab md-fab-bottom-right md-warn" ng-click="add()">        
-    <md-icon> add </md-icon>
-    <md-tooltip md-direction="top"> Agregar nota </md-tooltip>
-  </md-button>
-</div>
+<md-toolbar class="md-hue-3" md-scroll-shrink>
+    <div class="md-toolbar-tools">Ventas</div>
+</md-toolbar>
+<md-content flex layout-padding>
+  <section>
+  <md-subheader class="md-primary">Notas de venta</md-subheader>
+  <md-list>
+      <md-list-item md-ink-ripple class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
+        <div class="md-list-item-text" layout="column">
+          <h3 class="dodgerblue">{{ item.sale_id }} - {{ item.customer_name | uppercase }}</h3>
+          <h4>{{ item.status_id }} {{ item.sale_total | currency }}&nbsp;</h4>
+          <p>{{ item.sale_timestamp | date:'medium' }}</p>
+        </div>
+        <div id="header" ng-include=" 'templates/template.menu.html' "></div>
+        <md-divider></md-divider>
+      </md-list-item>
+  </md-list>
+  </section>
+</md-content>
+<md-button class="md-fab md-fab-bottom-right md-warn" ng-click="add()">        
+  <md-icon> add </md-icon>
+  <md-tooltip md-direction="top"> Agregar nota </md-tooltip>
+</md-button>
