--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,17 +1,8 @@
-<div layout="column" layout-fill>  
-  <div layout-align="center" class="md-padding" layout="row">  
-      <ul>    
-          <li><a href="/#/account">Datos de la empresa</a></li>
-          <li><a href="/#/my">Mi perfil</a></li>
-          <li><a href="/#/password">Mi contraseña</a></li>
-          <li><a href="/#/profiles">Usuarios del sistema</a></li>
-          <li><a href="/#/customers">Catalogo de clientes</a></li>
-          <li><a href="/#/suppliers">Catalogo de proveedores</a></li>
-          <li><a href="/#/categories">Categorias de productos</a></li>
-          <li><a href="/#/products">Catalogo de productos</a></li>
-          <li><a href="/#/invoices">Notas de venta</a></li>
-          <li><a href="/#/reports">Reportes</a></li>
-          <li><a href="/#/logout">Cerrar sistema</a></li>
-      </ul>
-  </div>
+<div layout="column" layout-fill>
+  <md-toolbar class="md-hue-3" md-scroll-shrink>
+    <div class="md-toolbar-tools">Panel principal</div>
+  </md-toolbar>
+  <md-content>
+    
+  </md-content>      
 </div>
