--- a/templates/customers.html
+++ b/templates/customers.html
@@ -1,22 +1,22 @@
 <div layout="column" layout-fill>
-  <md-content layout-align="center" class="md-padding" layout="row">
-    <section>
-      <md-subheader class="md-primary">Listado de clientes</md-subheader>
-      <md-list layout-padding>
-          <md-list-item class="md-2-line"ng-repeat="item in items | filter: data.searchQuery">
-            <img gravatar-src="item.customer_email" gravatar-size="100" class="md-avatar" alt="{{ item.customer_key }}">
-            <div class="md-list-item-text" layout="column">
-              <h4>{{ item.customer_name | uppercase }}</h4>
-              <p>{{ item.customer_address_1 | uppercase }} {{ item.customer_address_2 | uppercase }}</p>
-            </div>
-            <div id="header" ng-include=" 'templates/template.menu.html' "></div>
-            <md-divider></md-divider>
-          </md-list-item>
-      </md-list>
-    </section>
+  <md-toolbar class="md-hue-3" md-scroll-shrink>
+    <div class="md-toolbar-tools">Clientes</div>
+</md-toolbar>
+  <md-content>
+    <md-subheader class="md-primary">Catalogo de clientes disponibles</md-subheader>
+    <md-list flex layout-padding>
+        <md-list-item class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
+          <div class="md-list-item-text" layout="column">
+            <h3 class="dodgerblue">{{ item.customer_name | uppercase }}</h3>
+            <p>{{ item.customer_address_1 | uppercase }} {{ item.customer_address_2 | uppercase }}</p>
+          </div>
+          <div id="header" ng-include=" 'templates/template.menu.html' "></div>
+          <md-divider></md-divider>
+        </md-list-item>
+    </md-list>
   </md-content>
   <md-button class="md-fab md-fab-bottom-right md-warn" ng-click="add()">        
     <md-icon> add </md-icon>
-    <md-tooltip md-direction="top"> Agregar cliente </md-tooltip>
-  </md-button>
+    <md-tooltip md-direction="top"> Agregar categoría </md-tooltip>
+  </md-button>        
 </div>
