--- a/templates/partials/app.html
+++ b/templates/partials/app.html
@@ -23,9 +23,9 @@
           </a>
         </md-item>
       <md-divider></md-divider>
-      <md-subheader>Management</md-subheader>
+      <md-subheader>Administracón</md-subheader>
         <md-item ng-repeat="item in admin">
-          <a>
+          <a ng-href="{{item.link}}">
             <md-item-content md-ink-ripple layout="row" layout-align="start center">
               <div class="inset">
                 <ng-md-icon icon="{{item.icon}}"></ng-md-icon>
