--- a/templates/products.html
+++ b/templates/products.html
@@ -1,8 +1,11 @@
 <div layout="column" layout-fill>
-  <md-content layout-align="center" class="md-padding" layout="row">
-    <md-list flex="80">
-      <md-subheader class="md-no-sticky">Lineas de products</md-subheader>
-        <md-list-item class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
+  <md-toolbar class="md-hue-3" md-scroll-shrink>
+    <div class="md-toolbar-tools">Productos</div>
+</md-toolbar>
+  <md-content>
+    <md-subheader class="md-primary">Catalogo de productos activos</md-subheader>
+    <md-list flex layout-padding>
+        <md-list-item class="md-3-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
           <div class="md-list-item-text" layout="column">
             <h3 class="dodgerblue">{{ item.product_key | uppercase }} - {{ item.product_name | uppercase }}</h3>
             <h4>{{ item.category_name | uppercase }}</h4>
@@ -13,8 +16,8 @@
         </md-list-item>
     </md-list>
   </md-content>
-  <md-button class="md-fab md-fab-bottom-right" ng-click="add()">        
+  <md-button class="md-fab md-fab-bottom-right md-warn" ng-click="add()">        
     <md-icon> add </md-icon>
-    <md-tooltip md-direction="top"> Agregar producto </md-tooltip>
-  </md-button>
+    <md-tooltip md-direction="top"> Agregar categoría </md-tooltip>
+  </md-button>        
 </div>
