--- a/templates/profiles.html
+++ b/templates/profiles.html
@@ -1,11 +1,13 @@
 <div layout="column" layout-fill>
-  <md-content layout-align="center" class="md-padding" layout="row">
-    <md-list flex="80">
-      <md-subheader class="md-no-sticky">Cuentas</md-subheader>
-        <md-list-item class="md-2-line"ng-repeat="item in items | filter: data.searchQuery">
-          <img gravatar-src="item.profile_email" gravatar-size="100" class="md-avatar" alt="{{ item.profile_usernam }}" />
+  <md-toolbar class="md-hue-3" md-scroll-shrink>
+    <div class="md-toolbar-tools">Usuarios</div>
+</md-toolbar>
+  <md-content>
+    <md-subheader class="md-primary">Catalogo de usuarios disponibles</md-subheader>
+    <md-list flex layout-padding>
+        <md-list-item class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
           <div class="md-list-item-text" layout="column">
-            <h3><md-icon class="dodgerblue" ng-show="item.profile_enable"> check </md-icon> {{ item.profile_name | uppercase }}</h3>
+            <h3 class="dodgerblue">{{ item.profile_name | uppercase }}</h3>
             <p>{{ item.profile_username | lowercase }}</p>
           </div>
           <div id="header" ng-include=" 'templates/template.menu.html' "></div>
@@ -15,6 +17,6 @@
   </md-content>
   <md-button class="md-fab md-fab-bottom-right md-warn" ng-click="add()">        
     <md-icon> add </md-icon>
-    <md-tooltip md-direction="top"> Agregar cuenta </md-tooltip>
-  </md-button>
+    <md-tooltip md-direction="top"> Agregar categoría </md-tooltip>
+  </md-button>        
 </div>
