--- a/templates/stores.html
+++ b/templates/stores.html
@@ -1,14 +1,14 @@
 <div layout="column" layout-fill>
   <md-toolbar class="md-hue-3" md-scroll-shrink>
-    <div class="md-toolbar-tools">Proveedores</div>
-</md-toolbar>
+    <div class="md-toolbar-tools">Almacenes</div>
+  </md-toolbar>
   <md-content>
-    <md-subheader class="md-primary">Catalogo de proveedores activos</md-subheader>
+    <md-subheader class="md-primary">Catalogo de almacenes activos</md-subheader>
     <md-list flex layout-padding>
         <md-list-item class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
           <div class="md-list-item-text" layout="column">
-            <h3 class="dodgerblue">{{ item.supplier_name | uppercase }}</h3>
-            <p>{{ item.supplier_address_1 | uppercase }} {{ item.supplier_address_2 | uppercase }}</p>
+            <h3 class="dodgerblue">{{ item.store_name | uppercase }}</h3>
+            <p>{{ item.store_address | uppercase }}</p>
           </div>
           <div id="header" ng-include=" 'templates/template.menu.html' "></div>
           <md-divider></md-divider>
@@ -17,6 +17,6 @@
   </md-content>
   <md-button class="md-fab md-fab-bottom-right md-warn" ng-click="add()">        
     <md-icon> add </md-icon>
-    <md-tooltip md-direction="top"> Agregar categoría </md-tooltip>
+    <md-tooltip md-direction="top"> Agregar almacen </md-tooltip>
   </md-button>        
 </div>
