--- a/templates/products.html
+++ b/templates/products.html
@@ -5,7 +5,7 @@
   <md-content>
     <md-subheader class="md-primary">Catalogo de productos activos</md-subheader>
     <md-list flex layout-padding>
-        <md-list-item class="md-3-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
+        <md-list-item md-ink-ripple class="md-3-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
           <div class="md-list-item-text" layout="column">
             <h3 class="dodgerblue">{{ item.product_key | uppercase }} - {{ item.product_name | uppercase }}</h3>
             <h4>{{ item.category_name | uppercase }}</h4>
