--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,8 +1,9 @@
-<div layout="column" layout-fill>
-  <md-toolbar class="md-hue-3" md-scroll-shrink>
-    <div class="md-toolbar-tools">Panel principal</div>
-  </md-toolbar>
+<div ng-include=" 'templates/partials/toolbar.html' "></div>
+<div flex layout="row">
+  <div ng-include=" 'templates/partials/sidebar.html' "></div>
   <md-content>
     
-  </md-content>      
+    
+    
+  </md-content>
 </div>
