--- a/templates/customers.html
+++ b/templates/customers.html
@@ -1,22 +1,35 @@
-<div layout="column" layout-fill>
-  <md-toolbar class="md-hue-3" md-scroll-shrink>
-    <div class="md-toolbar-tools">Clientes</div>
-</md-toolbar>
-  <md-content>
-    <md-subheader class="md-primary">Catalogo de clientes disponibles</md-subheader>
-    <md-list flex layout-padding>
-        <md-list-item md-ink-ripple class="md-2-line secondary-button-padding" ng-repeat="item in items | filter: data.searchQuery">
-          <div class="md-list-item-text" layout="column">
-            <h3 class="dodgerblue">{{ item.customer_name | uppercase }}</h3>
-            <p>{{ item.customer_address_1 | uppercase }} {{ item.customer_address_2 | uppercase }}</p>
-          </div>
-          <div id="header" ng-include=" 'templates/template.menu.html' "></div>
-          <md-divider></md-divider>
-        </md-list-item>
-    </md-list>
-  </md-content>
-  <md-button class="md-fab md-fab-bottom-right md-warn" ng-click="add()">        
-    <md-icon> add </md-icon>
-    <md-tooltip md-direction="top"> Agregar categoría </md-tooltip>
-  </md-button>        
+<div ng-include=" 'templates/partials/toolbar.html' "></div>
+<div flex layout="row">
+  <div ng-include=" 'templates/partials/sidebar.html' "></div>
+  <div flex layout="column">
+    <div md-scroll-shrink>
+        <md-input-container layout-margin class="md-icon-float md-block">
+            <label>Buscar...</label>
+            <md-icon md-svg-icon="search"></md-icon>
+            <input ng-model="searchQuery" md-detect-hidden md-select-on-focus autofocus>
+        </md-input-container>
+    </div>
+    <md-content>
+      <md-progress-linear class="md-warn" md-mode="indeterminate" ng-hide="bar"> Cargando... </md-progress-linear>
+      <md-list>
+        <md-subheader>Clientes</md-subheader>
+          <md-list-item md-ink-ripple class="md-2-line" ng-repeat="item in items | filter: searchQuery">
+            <div class="md-list-item-text" layout="column">
+              <h3 class="dodgerblue">{{ item.customer_name | uppercase }}</h3>
+              <p>{{ item.customer_address_1 | uppercase }} {{ item.customer_address_2 | uppercase }}</p>
+            </div>
+            <div class="md-secondary md-icon-button" ng-include=" 'templates/partials/menu-customers.html' "></div>
+            <md-divider ng-if="!$last"></md-divider>
+          </md-list-item>
+      </md-list>
+    </md-content>
+    <md-button class="md-fab md-mini md-fab-top-right md-warn" ng-click="clear()" ng-disabled="!searchQuery">    
+      <md-icon md-svg-icon="clear" class="s18"></md-icon>
+      <md-tooltip md-direction="top"> Limpiar busqueda </md-tooltip>
+    </md-button>
+    <md-button class="md-fab md-fab-bottom-right" ng-click="add()">    
+      <md-icon md-svg-icon="add"></md-icon>
+      <md-tooltip md-direction="top"> Agregar </md-tooltip>
+    </md-button>
+  </div>  
 </div>
