--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -3,7 +3,10 @@
   <div ng-include=" 'templates/partials/sidebar.html' "></div>
   <md-content>
     
-    
+    <ul>
+      <li>Ajuste de rol</li>
+      <li>Impresion PDF</li>
+    </ul>
     
   </md-content>
 </div>
