--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -1,8 +1,17 @@
 <div layout="column" layout-fill layout-align="center center">
-  <div layout-align="center" class="md-padding" layout="row">
-    <md-content flex layout="column" class="page">
-      <h1 class="title">albaco</h1>
-      <p>es un software de punto de venta</p> 
-    </md-content>
+  <div layout="column" role="main">
+    <div layout-align="space-between stretch" layout="column">
+      <div layout="row" layout-padding layout-align="center">
+       <div flex="66">
+        <h1 class="title">Acerca de</h1>
+        <section layout="row">
+          <p>Albaco POS es un software de punto de venta.</p> 
+        </section>
+        <section layout-align="center" layout="row">
+          <a class="small" ng-href="#/"><md-icon md-svg-icon="arrow_back"></md-icon> regresar a inicio</a> 
+        </section>
+       </div>
+      </div>
+    </div>
   </div>
 </div>
