--- a/templates/main/contact.html
+++ b/templates/main/contact.html
@@ -3,8 +3,7 @@
     <div layout-align="space-between stretch" layout="column">
       <div layout="row" layout-padding layout-align="center">
        <div flex="66">
-        <img src="img/unam_256_grey.png" alt="unam logo" class="logo-unam">
-        <h1 class="title">Acerca de</h1>
+        <h1 class="title">Albaco POS</h1>
         <section layout="row">
           <p>Albaco POS es un software de punto de venta.</p> 
         </section>
