--- a/templates/main/login.html
+++ b/templates/main/login.html
@@ -3,7 +3,7 @@
     <div layout-align="space-between stretch" layout="column">
       <div layout="row" layout-padding layout-align="center">
        <div flex="100">
-        <h1 class="title">Albaco POS</h1>
+        <h1 class="title">Albaco</h1>
         <section layout="column" layout-align="center">
           <form name="form">
             <md-input-container class="md-block">
