--- a/templates/main/about.html
+++ b/templates/main/about.html
@@ -3,7 +3,7 @@
     <div layout-align="space-between stretch" layout="column">
       <div layout="row" layout-padding layout-align="center">
        <div flex="66">
-        <h1 class="title">Albaco POS</h1>
+        <h1 class="title">Albaco</h1>
         <section layout="row">
           <p>Albaco POS es un software de punto de venta.</p> 
         </section>
