--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -8,5 +8,10 @@
       <li>Impresion PDF</li>
     </ul>
     
+    <ul>
+      <li>Editar tienda listo</li>
+      
+    </ul>
+    
   </md-content>
 </div>
