partial user adjustment

--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -9,8 +9,8 @@
     </ul>
     
     <ul>
-      <li>Editar tienda listo</li>
-      
+      <li>Administracion de almacen listo</li>
+      <li>Administracion de usuarios listo</li>
     </ul>
     
   </md-content>
