--- a/templates/users/user.html
+++ b/templates/users/user.html
@@ -4,7 +4,7 @@
     <form name="form">
         <md-input-container class="md-block">
             <label>Nombre completo</label>
-            <input name="profile_name" ng-model="profile.profile_name" type="text" md-maxlength="45" capitalize required autofocus>
+            <input name="profile_name" ng-model="item.profile_name" type="text" ng-change="change()" md-maxlength="45" capitalize required autofocus>
             <div ng-messages="form.profile_name.$error">
                 <div ng-message="required">Campo requerido</div>
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 45 caracteres de longitud</div>
@@ -12,7 +12,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Nombre de usuario</label>
-            <input name="profile_username" ng-model="profile.profile_username" type="text" md-maxlength="10" capitalize required>
+            <input name="profile_username" ng-model="item.profile_username" type="text" ng-change="change()" md-maxlength="10" required>
             <div ng-messages="form.profile_username.$error">
                 <div ng-message="required">Campo requerido</div>
                 <div ng-message="md-maxlength">El campo debe de ser de menos de 10 caracteres de longitud</div>
@@ -20,7 +20,7 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Teléfono</label>
-            <input name="profile_phone" ng-model="profile.profile_phone" type="text" ng-minlength="10" ng-maxlength="10" ng-pattern="/^[0-9]{10}$/">
+            <input name="profile_phone" ng-model="item.profile_phone" type="text" ng-change="change()" ng-minlength="10" ng-maxlength="10" ng-pattern="/^[0-9]{10}$/">
             <div ng-messages="form.profile_phone.$error">
                 <div ng-message-exp="['minlength', 'maxlength', 'pattern']">
                     Se requiere un teléfono valido
@@ -29,13 +29,16 @@
         </md-input-container>
         <md-input-container class="md-block">
             <label>Correo electrónico</label>
-            <input name="profile_email" ng-model="profile.profile_email" type="email" md-maxlength="45" ng-pattern="/^.+@.+\..+$/" required>
+            <input name="profile_email" ng-model="item.profile_email" type="email" ng-change="change()" md-maxlength="45" ng-pattern="/^.+@.+\..+$/">
             <div ng-messages="form.profile_email.$error">
-                <div ng-message-exp="['required', 'md-maxlength', 'pattern']">
+                <div ng-message-exp="['md-maxlength', 'pattern']">
                     Se requiere un correo electrónico valido
                 </div>
             </div>
         </md-input-container>
+        <md-switch ng-true-value="1" class="md-primary" ng-model="item.profile_enable" aria-label="habilitado" ng-change="change()">
+            Habilitado
+        </md-switch>
     </form>
     <!-- Termina formulario -->
 </md-content>
