--- a/templates/app/dashboard.html
+++ b/templates/app/dashboard.html
@@ -4,7 +4,8 @@
   <md-content>
     
     <ul>
-      <li>Ajuste de rol</li>
+      <li>Ajuste de rol en usuarios</li>
+      <li>catalogo de roles</li>
       <li>Impresion PDF</li>
     </ul>
     
