--- a/templates/users/user.html
+++ b/templates/users/user.html
@@ -2,6 +2,15 @@
 <md-content id="content" layout-align="center" class="md-padding" layout="column">
     <!-- Inicia formulario -->
     <form name="form">
+        <md-input-container class="md-block" flex-gt-xs>
+            <label>Perfil del usuario</label>
+            <md-select ng-model="item.role_id" ng-change="change()">
+                <md-option ng-repeat="role in list1" value="{{ role.role_id }}">
+                {{ role.role_name }}
+                </md-option>
+            </md-select>
+            <br>
+        </md-input-container>
         <md-input-container class="md-block">
             <label>Nombre completo</label>
             <input name="profile_name" ng-model="item.profile_name" type="text" ng-change="change()" md-maxlength="45" capitalize required autofocus>
